
=======================================================
            WanT code:  Log of Changes 
=======================================================


03 Oct 2006      I/O of symmetry data implemented. Bug fixed and performance issues
                 tackled in qexpt.f90. qexml.f90 further implemented, according to
                 v1.2.0 . (AF) 

29 Sep 2006      Bug fixed in qexpt and qexml libs when reading wfc with ibnds /= 1 .
                 Signalation courtesy of Matias Nunez. (AF)

25 Sep 2006      work_dir manage fixed in bands.x and dos.x . (AF)

22 Sep 2006      Script lib for running test added to HOME/script dir; test06 partly
                 updated. (AF) 

17 Sep 2006      Bug fixed in the energy window summary (win_min wasn't dispalyed 
                 correctly). (AF)

12 Sep 2006      use_nn variable added to bands.f90 ; few changes also in dos.f90. (AF) 

06 Sep 2006      bug fixed in modpoint.f90 ; iutility/Makefile coherently updated. 
                 other bugs fixed in calls to the warning routine. 
                 IO routines for NQ ETSF NetCDF fmt (courtesy of V. Olevano, M. Verstraete) 
                 added to libs. (AF) 

02 Sep 2006      configure wrapper updated.  (AF)

26 Aug 2006      WF projected DOS calculation added in dos.x . (AF)

25 Aug 2006      "formatted" attribute no longer specified in iotk file_open (transport)
                 and in iotk writing of ovp. (AF) 

09 Aug 2006      Bug fix in utility/Makefile: LDFLAGS and CFLAGS added during loading.
                 Adviced by Matias Nunez. (AF)

04 Aug 2006      Makefile in libs bug-fixed (wrong compilation of dlamch.f90 under certain
                 circumstances). Courtesy of Matias Nunes. (AF)

22 Jul 2006      Symmetry module added to wannier/ ; qexpt.f90 updated including also
                 the missing qexpt_read_symmetry routine. (AF)

18 Jul 2006      Output fmt in transport changed; ierr is given back in transfer.f90; warnings