@@ -57,7 +57,7 @@ FDFLAGS        = @fdflags@
 IFLAGS         = -I../include @ifftw@
 MODFLAGS       = @imod@. @imod@../iotk @imod@../libs @imod@../wannier @imod@../transport
 
-LIBOBJS        = ../iotk/libiotk.a ../libs/libwant.a
+LIBOBJS        = ../libs/libwant.a ../iotk/libiotk.a ../ctools/libctools.a
 
 # LIBS must contain the location of all needed external libraries
 LIBS           = $(LAPACK_LIBS) $(BLAS_LIBS) $(FFT_LIBS) $(MPI_LIBS) $(MASS_LIBS)
